--- a/gb/24/11/8/n14367048.md
+++ b/gb/24/11/8/n14367048.md
@@ -3,14 +3,13 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>调查：小米气炸锅与华为手表恐监控用户</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/01/id13489635-000_8YT6PM-600x400.jpg" />
-<h6>2021年1月15日，北京一家小米门市。此前一天，小米被美国政府列入与中共军方相关的黑名单。(Greg Baker / AFP)
-</h6>
+<h6>2021年1月15日，北京一家小米门市。此前一天，小米被美国政府列入与中共军方相关的黑名单。(Greg Baker / AFP)</h6>
 <hr>
 	<p>【大纪元2024年11月08日讯】（大纪元记者陈霆综合报导）英国消费者组织发现，许多智能家电产品都有“过度监控”的问题，并指三个中国品牌气炸锅不仅要求获取用户的精准定位，甚至要求手机的录音许可权限。华为智能手表也因要求了9个可能构成风险的隐私许可，构成监控隐忧。</p>
 <p>英国消费者保护团体“Which?”在报告<ahref="https://www.which.co.uk/policy-and-insight/article/why-is-my-air-fryer-spying-on-me-which-reveals-the-smart-devices-gathering-your-data-and-where-they-send-it-a9Fa24K6gY1c" target="_blank" rel="noopener">链接</a>）中表示，研究人员测试了三家中国制造商的气炸锅（air fryer，也称空气炸锅），包括小米、Aigostar及Cosori，结果发现三款产品除了需要追踪客户的精确定位外，还在未说明具体原因的情况下，要求获取用户手机的录音权限。</p>
 <p>该组织发现，小米管理智能家电的App，不仅连接了Facebook、TikTok广告网络Pangle的追踪器，且根据用户所在位置，甚至可能连结至腾讯的追踪器。</p>
 <p>Aigostar气炸锅在使用者设定账号时，希望取得用户的性别及出生日期，尽管用户可以选填（并非必填），但厂商对为何收集这些信息，却未给予合理的原因。</p>
-<p>调查报告还警告，小米及Aigostar的气炸锅都会将用户的信息传送至中国的服务器。虽然，在产品的隐私声明中已标明了这一点。</p>
+<p>调查报告还警告，小米及Aigostar的气炸锅都会将用户的信息传送至中国的服务器。虽然在产品的隐私声明中已标明了这一点。</p>
 <p>2021年美国国防部已将小米列入与中共军方有联系的黑名单，部分原因是该公司创始人雷军获得中共国家奖项，以及小米的技术野心。</p>
 <p>Aigostar是福州“爱国者之星”光电科技有限公司的旗下品牌，产品销售至西班牙、意大利、荷兰、英国、美国等十几个欧美国家。</p>
 <p>Cosori全名为深圳市晨北科技有限公司，2007年成立以来，研发了多种智能家电产品。除了气炸锅，该公司还开发了饮料机、食品脱水机、烤炉等。</p>
@@ -25,49 +24,42 @@
 <p>小米也指出，某些功能仅会在特定的市场启用，例如腾讯服务即仅在中国使用。</p>
 <p>Cosori则表示，该公司以隐私权为优先，在内部合规要求的基础上，确保智能产品符合《一般资料保护规则》（GDPR）。Aigostar则尚未做出回应。</p>
 <p>英国信息专员办公室目前正为智能产品制造商制定新指南，将详细说明厂商需遵循的规范，以确保符合与资料保护法规。该指南计划于2025年春季公布。</p>
-	
+<div class="related-article" style="display: block;"><span style="color: #000;font-weight:bold;">推荐阅读：</span></div>
+<ul class="related-posts"style="color: #0000ff; list-style: inside;">
+<li><span style="font-weight:bold;display: inline-block;"><a style="color: #0000ff; " href=><a href="https://github.com/1992513/djy/blob/master/gb/24/10/11/n14348612.md#1" target="_blank" rel="noopener">不止监控全民 专家：中共盯上了大数据暴利</a></span></li>
+<li><span style="font-weight:bold;display: inline-block;"><a style="color: #0000ff; " href=><a href="https://github.com/1992513/djy/blob/master/gb/24/9/15/n14330909.md#1" target="_blank" rel="noopener">河北用户曝小米监控摄像头传出陌生男声</a></span></li>
+<li><span style="font-weight:bold;display: inline-block;"><a style="color: #0000ff; " href=><a href="https://github.com/1992513/djy/blob/master/gb/24/9/29/n14340482.md#1" target="_blank" rel="noopener">外籍模特遭上海虹桥机场安检员泄露隐私</a></span></li>
+<li><span style="font-weight:bold;display: inline-block;"><a style="color: #0000ff; " href=><a href="https://github.com/1992513/djy/blob/master/gb/24/6/10/n14267914.md#1" target="_blank" rel="noopener">忧间谍与人权侵犯 荷兰首都淘汰中国制摄像头</a></span></li>
+<li><span style="font-weight:bold;display: inline-block;"><a style="color: #0000ff; " href=><a href="https://github.com/1992513/djy/blob/master/gb/24/4/24/n14233367.md#1" target="_blank" rel="noopener">中共监视系统新增“耳目” 内部人士爆监控内幕</a></span></li>
+</ul>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/24/n14357333.md#1">贺锦丽还是川普？中国民众怎么看美国大选</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/31/n14361921.md#1">美国大选新闻越看越焦虑 专家教你降压法</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/1/n14362589.md#1">美国大选日前 民众提前投票热情高</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/2/n14363005.md#1">美国大选胜负难料 对冲基金寻找时机</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286429.md#1">组图：飓风贝里尔重创德州 至少3人遇难</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/25/n14337875.md#1">组图：飓风约翰袭墨西哥南部 至少3人死亡</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/28/n14339968.md#1">组图：超强飓风海伦横扫美东南部 酿44死</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/11/n14348325.md#1">组图：飓风米尔顿袭佛州酿16死 灾损或数百亿</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/22/n14336140.md#1">《神鬼战士2》让86岁导演找回热情 想拍第三部</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/24/n14337154.md#1">子承父业 《神鬼战士2》卢赛斯正是麦西穆斯的儿子</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/16/n14351701.md#1">苍白的保罗麦斯卡烈日下当角斗士 对导演很不爽</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/5/n14364510.md#1">谈鲨鱼争议 导演雷利反赞罗马人建筑技术胜现代</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/8/n14366917.md#1">日防长首登韩军舰 强调强化防务合作</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/8/n14366915.md#1">马斯克会入阁吗 川普可能的内阁人选一览</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/8/n14366854.md#1">普京祝贺川普当选 称赞川普勇敢</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/8/n14366828.md#1">【秦鹏观察】川普获胜 5波力量助选 破中共谎言</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549246.md#1">担忧被裁员 Z世代最不愿在职场使用AI</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14571859.md#1">从裁员到高校课程：AI改变职场与教育</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/18/n10069025.md#1" target="_blank">杨宁：八路军为何大量购买治花柳病的药品？</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/27/n11480776.md#1" target="_blank">印度中部城市学校师生学炼法轮功</a></li>
+<li><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/6/27/n11350548.md#1" target="_blank">王友群：陈独秀等10位中共党魁的最后结局</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/17/n11119803.md#1" target="_blank">见证奇迹 一位越南女子修炼法轮功的故事</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/17/n14352322.md#1">【古道人生】父亲嫌女婿家变穷悔婚 女儿守婚约得好结果</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/4/n14364228.md#1">立冬养精蓄锐 补肾保养日常六招</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/1/n14362702.md#1">【未解之谜】CIA禁书（下）新一次文明更迭倒计时？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/28/n14359422.md#1">为何为逝世的家属“做七”? “七”是个吉数？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/21/n14354767.md#1">捍卫战士：与年轻的自己对话（2/3）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/2/n14363175.md#1">【百年真相】习担忧的中共掘墓人是谁？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/7/n14366654.md#1">【舞蹈三剑客】法轮大法与神韵有什么联系？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/6/n14365878.md#1">【马克时空】策略有问题 俄特种部队损失惨重</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/5/n14364881.md#1">中国餐饮业大面积塌方 哀鸿遍野</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/25/n14357910.md#1">【直播】川普宣布胜选 新唐人特别节目</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/4/n14364307.md#1">【更新】美国大选 七摇摆州首波出口民调</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/4/n14364365.md#1">因大战小粉红爆红 英钢琴家卡瓦纳或游台湾</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/5/n14365184.md#1">《不可能的任务8》被定为最终章 传阿汤哥反对</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/7/n14365997.md#1">汤姆?克鲁斯被指眼袋深重 宁试偏方拒动手术</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/6/n14365848.md#1">实习生林柏宏留下离别信 内容却引张艾嘉怒喊</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/4/n14364327.md#1">景甜回应外界传闻 动手术素颜病榻照曝光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/6/n14365602.md#1">用铝箔纸烹调食物安全吗？ 让专家告诉你</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/5/n14364594.md#1">砧板会窝藏细菌 用两种天然物品可有效清理</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/2/n14363113.md#1">把寒性水果变成香甜美味的“养生甜点”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/2/n14363110.md#1">了解自己的体质 你是热性还是寒性？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/2/n14362764.md#1">劣质衣服含有毒物质 专家教你如何清洗</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/11/8/n14367048.htm">调查：小米气炸锅与华为手表恐监控用户</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/11/8/n14367048.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
